Prevent calculator from moving off the top of the page
Calculator would move off the top of the page if it got too high

--- a/ngculator/calc.css
+++ b/ngculator/calc.css
@@ -7,6 +7,7 @@
 }
 body {
     background-color: #111;
+    max-height: 90vh;
 }
 .calc {
     position: absolute;
